<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">摔倒检测</string>
    <string name="action_settings">Settings</string>
    <string name="sensor_info">传感器的详细信息：</string>
    <string name="x_info">x轴上的加速度为：</string>
    <string name="y_info">y轴上的加速度为：</string>
    <string name="z_info">z轴上的加速度为：</string>
    <string name="a_info">合加速度为：</string>
    <string name="step_info">步数</string>
    <string name="angle_info">夹角为：</string>
    <string name="write">开始记录</string>
    <string name="stop">停止记录</string>
    <string name="stepstart">开始计步</string>
    <string name="stepstop">停止计步</string>
</resources>
